demo-app-react/k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo-app-react
spec:
  subdomain: demo-app-react
  to:
    kind: Service
    name: demo-app-react
    weight: 100
  port:
    targetPort: http
